using Grpc.Core;

namespace GrpcRealtimePush.Services;

public class ChatService : GrpcRealtimePush.ChatService.ChatServiceBase
{
    private readonly ILogger<ChatService> _logger;

    public ChatService(ILogger<ChatService> logger)
    {
        _logger = logger;
    }



    public override async Task StartRealtimePush(RealtimePushRequest request, 
        IServerStreamWriter<RealtimePushResponse> responseStream, ServerCallContext context)
    {
        _logger.LogInformation("ğŸš€ å®æ—¶æ¨é€å·²å¯åŠ¨! å®¢æˆ·ç«¯: {ClientId}", request.ClientId);
        
        try
        {
            // Start continuous data push
            var counter = 1;
            var random = new Random();
            var dataTypes = new[] { "ç³»ç»ŸçŠ¶æ€", "ç”¨æˆ·æ´»åŠ¨", "æ•°æ®æ›´æ–°", "é€šçŸ¥æ¶ˆæ¯", "æ€§èƒ½æŒ‡æ ‡" };
            
            _logger.LogInformation("ğŸ”„ å¼€å§‹è¿ç»­æ•°æ®æ¨é€å¾ªç¯...");
            
            while (!context.CancellationToken.IsCancellationRequested && counter <= 100)
            {
                // Simulate different types of real-time data
                var dataType = dataTypes[random.Next(dataTypes.Length)];
                var value = random.Next(1, 1000);
                var timestamp = DateTime.UtcNow;
                
                var response = new RealtimePushResponse
                {
                    Data = $"#{counter:D4} - æ•°å€¼: {value} | æ—¶é—´: {timestamp:HH:mm:ss.fff}",
                    Timestamp = DateTimeOffset.UtcNow.ToUnixTimeSeconds(),
                    DataType = dataType
                };

                await responseStream.WriteAsync(response);
                _logger.LogInformation("ğŸ“¡ æ¨é€æ•°æ® #{Counter}: [{DataType}] = {Value} at {Time}", 
                    counter, dataType, value, timestamp.ToString("HH:mm:ss.fff"));
                
                counter++;
                
                // Wait before sending next update
                await Task.Delay(2000, context.CancellationToken);
            }
            
            // Send final message
            await responseStream.WriteAsync(new RealtimePushResponse
            {
                Data = "å®æ—¶æ¨é€æµ‹è¯•å®Œæˆï¼",
                Timestamp = DateTimeOffset.UtcNow.ToUnixTimeSeconds(),
                DataType = "ç³»ç»Ÿæ¶ˆæ¯"
            });
            
        }
        catch (OperationCanceledException)
        {
            _logger.LogInformation("å®æ—¶æ¨é€ä¼šè¯å·²å–æ¶ˆï¼Œå®¢æˆ·ç«¯: {ClientId}", request.ClientId);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "å®æ—¶æ¨é€ä¼šè¯å‡ºé”™: {Error}", ex.Message);
            
            // Try to send error message to client
            try
            {
                await responseStream.WriteAsync(new RealtimePushResponse
                {
                    Data = $"æœåŠ¡å™¨é”™è¯¯: {ex.Message}",
                    Timestamp = DateTimeOffset.UtcNow.ToUnixTimeSeconds(),
                    DataType = "é”™è¯¯æ¶ˆæ¯"
                });
            }
            catch (Exception sendError)
            {
                _logger.LogError(sendError, "å‘é€é”™è¯¯æ¶ˆæ¯å¤±è´¥");
            }
        }
        
        _logger.LogInformation("å®æ—¶æ¨é€ä¼šè¯ç»“æŸï¼Œå®¢æˆ·ç«¯: {ClientId}", request.ClientId);
    }


}