// gRPC-Web Chat Client Implementation

class RealtimePushClient {
    constructor() {
        this.client = null;
        this.isConnected = false;
        this.serverUrl = 'https://localhost:5201';
        
        // Streaming related properties
        this.currentStream = null;
        this.streamMessageCount = 0;
        this.streamStartTime = null;
        
        this.initializeUI();
    }

    initializeUI() {
        const streamButton = document.getElementById('streamButton');
        const stopStreamButton = document.getElementById('stopStreamButton');
        const clearButton = document.getElementById('clearButton');

        streamButton.addEventListener('click', () => this.startStreamingChat());
        stopStreamButton.addEventListener('click', () => this.stopStreaming());
        clearButton.addEventListener('click', () => this.clearMessages());

        // Initialize connection status
        this.updateConnectionStatus(false, 'æ­£åœ¨åˆå§‹åŒ–...');

        // Try to connect when the page loads
        this.connect();
    }



    connect() {
        try {
            // Initialize the gRPC-Web client using the generated protobuf classes
            console.log('æ­£åœ¨åˆå§‹åŒ–å®æ—¶æ¨é€å®¢æˆ·ç«¯...');
            
            // Check if the required dependencies are available
            if (typeof jspb === 'undefined') {
                throw new Error('google-protobuf åº“æœªåŠ è½½');
            }
            
            if (typeof grpc === 'undefined' || !grpc.web) {
                console.warn('grpc-web åº“æœªå®Œå…¨åŠ è½½ï¼Œç­‰å¾…é‡è¯•...');
                setTimeout(() => this.connect(), 1000);
                return;
            }
            
            if (typeof proto === 'undefined' || !proto.chat || !proto.chat.ChatServiceClient) {
                throw new Error('gRPC ç”Ÿæˆçš„å®¢æˆ·ç«¯ä»£ç æœªåŠ è½½');
            }

            // Create the gRPC-Web client
            this.client = new proto.chat.ChatServiceClient(this.serverUrl, null, {
                format: 'text',
                withCredentials: false
            });
            
            console.log('å®æ—¶æ¨é€å®¢æˆ·ç«¯åˆ›å»ºæˆåŠŸ');
            this.updateConnectionStatus(true, 'å·²è¿æ¥');
            this.addMessage('ç³»ç»Ÿ', 'ğŸš€ å®æ—¶æ¨é€å®¢æˆ·ç«¯å·²å°±ç»ª', 'system');
            
        } catch (error) {
            console.error('è¿æ¥åˆå§‹åŒ–å¤±è´¥:', error);
            this.updateConnectionStatus(false, 'åˆå§‹åŒ–å¤±è´¥');
            this.addMessage('ç³»ç»Ÿ', 'åˆå§‹åŒ–å¤±è´¥: ' + this.getErrorMessage(error), 'error');
        }
    }



    updateConnectionStatus(connected, message = '') {
        const statusDiv = document.getElementById('status');
        const sendButton = document.getElementById('sendButton');
        const streamButton = document.getElementById('streamButton');
        
        this.isConnected = connected;
        
        if (connected) {
            statusDiv.textContent = 'çŠ¶æ€: å·²è¿æ¥' + (message ? ' - ' + message : '');
            statusDiv.className = 'status connected';
            streamButton.disabled = false;
        } else {
            statusDiv.textContent = 'çŠ¶æ€: æœªè¿æ¥' + (message ? ' - ' + message : '');
            statusDiv.className = 'status disconnected';
            streamButton.disabled = true;
        }
    }



    addMessage(sender, content, type) {
        const chatContainer = document.getElementById('chatContainer');
        const messageDiv = document.createElement('div');
        messageDiv.className = `message ${type}`;
        
        const timestamp = new Date().toLocaleTimeString();
        messageDiv.innerHTML = `
            <div><strong>${sender}</strong> <small>${timestamp}</small></div>
            <div>${content}</div>
        `;

        chatContainer.appendChild(messageDiv);
        chatContainer.scrollTop = chatContainer.scrollHeight;


    }

    clearMessages() {
        const chatContainer = document.getElementById('chatContainer');
        chatContainer.innerHTML = '';
        this.addMessage('ç³»ç»Ÿ', 'æ¶ˆæ¯å†å²å·²æ¸…ç©º', 'system');
    }

    startStreamingChat() {
        if (!this.isConnected) {
            this.addMessage('ç³»ç»Ÿ', 'æœªè¿æ¥åˆ°æœåŠ¡å™¨ï¼Œæ— æ³•å¯åŠ¨å®æ—¶æ¨é€', 'error');
            return;
        }

        if (!this.client) {
            this.addMessage('ç³»ç»Ÿ', 'gRPCå®¢æˆ·ç«¯æœªåˆå§‹åŒ–', 'error');
            return;
        }

        // Check if already streaming
        if (this.currentStream) {
            this.addMessage('ç³»ç»Ÿ', 'å®æ—¶æ¨é€å·²åœ¨è¿è¡Œä¸­', 'system');
            return;
        }

        try {
            // Create a RealtimePushRequest for starting the stream
            const pushRequest = new proto.chat.RealtimePushRequest();
            pushRequest.setClientId('web-client-' + Date.now());
            pushRequest.setTimestamp(Math.floor(Date.now() / 1000));

            console.log('å¯åŠ¨å®æ—¶æ¨é€:', {
                clientId: pushRequest.getClientId(),
                timestamp: pushRequest.getTimestamp()
            });

            // Add metadata for streaming
            const metadata = {
                'x-user-agent': 'grpc-web-realtime-client'
            };

            // Start the streaming
            console.log('ğŸš€ Calling client.startRealtimePush...');
            const stream = this.client.startRealtimePush(pushRequest, metadata);
            
            if (!stream) {
                throw new Error('æ— æ³•åˆ›å»ºå®æ—¶æ¨é€è¿æ¥');
            }

            console.log('âœ… Stream created successfully:', stream);

            // Store the stream reference
            this.currentStream = stream;
            this.streamMessageCount = 0;
            this.streamStartTime = Date.now();

            // Update UI to show streaming is active
            this.updateStreamingUI(true);

            stream.on('data', (response) => {
                console.log('ğŸ“¡ æ”¶åˆ°å®æ—¶æ•°æ®:', response);
                if (response && typeof response.getData === 'function') {
                    this.streamMessageCount++;
                    
                    console.log(`âœ… å¤„ç†ç¬¬ ${this.streamMessageCount} æ¡å®æ—¶æ•°æ®:`, response.getData());
                    
                    // Add message with special styling for real-time data
                    this.addRealtimeMessage(
                        `[${response.getDataType()}] ${response.getData()}`, 
                        this.streamMessageCount
                    );
                    
                    // Update statistics
                    this.updateStreamStats();
                } else {
                    console.warn('âŒ æ”¶åˆ°æ— æ•ˆçš„å®æ—¶å“åº”:', response);
                }
            });

            stream.on('error', (error) => {
                console.error('å®æ—¶æ¨é€é”™è¯¯:', error);
                this.addMessage('ç³»ç»Ÿ', 'å®æ—¶æ¨é€é”™è¯¯: ' + this.getErrorMessage(error), 'error');
                this.stopStreaming();
            });

            stream.on('end', () => {
                console.log('å®æ—¶æ¨é€ç»“æŸ');
                this.addMessage('ç³»ç»Ÿ', 'å®æ—¶æ¨é€å·²ç»“æŸ', 'system');
                this.stopStreaming();
            });

            stream.on('status', (status) => {
                console.log('å®æ—¶æ¨é€çŠ¶æ€:', status);
                if (status.code !== 0) {
                    this.addMessage('ç³»ç»Ÿ', `å®æ—¶æ¨é€çŠ¶æ€é”™è¯¯: ${status.details}`, 'error');
                }
            });

            this.addMessage('ç³»ç»Ÿ', 'ğŸš€ å®æ—¶æ•°æ®æ¨é€å·²å¯åŠ¨', 'system');
            
        } catch (error) {
            console.error('å¯åŠ¨å®æ—¶æ¨é€å¤±è´¥:', error);
            this.addMessage('ç³»ç»Ÿ', 'å¯åŠ¨å®æ—¶æ¨é€å¤±è´¥: ' + this.getErrorMessage(error), 'error');
        }
    }

    stopStreaming() {
        if (this.currentStream) {
            try {
                // Note: gRPC-Web doesn't have a standard cancel method
                // The stream will be closed when the component is destroyed
                this.currentStream = null;
                this.updateStreamingUI(false);
                this.addMessage('ç³»ç»Ÿ', 'â¹ï¸ å®æ—¶æ¨é€å·²åœæ­¢', 'system');
            } catch (error) {
                console.error('åœæ­¢å®æ—¶æ¨é€æ—¶å‡ºé”™:', error);
            }
        }
    }

    updateStreamingUI(isStreaming) {
        const streamButton = document.getElementById('streamButton');
        const stopButton = document.getElementById('stopStreamButton');
        
        if (isStreaming) {
            streamButton.style.display = 'none';
            if (stopButton) {
                stopButton.style.display = 'inline-block';
            }
        } else {
            streamButton.style.display = 'inline-block';
            if (stopButton) {
                stopButton.style.display = 'none';
            }
        }
    }

    addRealtimeMessage(content, count) {
        const chatContainer = document.getElementById('chatContainer');
        const messageDiv = document.createElement('div');
        messageDiv.className = 'message realtime';
        
        const timestamp = new Date().toLocaleTimeString();
        messageDiv.innerHTML = `
            <div class="realtime-header">
                <strong>ğŸ“¡ å®æ—¶æ•°æ® #${count}</strong> 
                <small>${timestamp}</small>
            </div>
            <div class="realtime-content">${content}</div>
        `;

        chatContainer.appendChild(messageDiv);
        
        // Auto-scroll to bottom
        chatContainer.scrollTop = chatContainer.scrollHeight;

        // Keep only last 100 messages to prevent memory issues
        const messages = chatContainer.querySelectorAll('.message');
        if (messages.length > 100) {
            for (let i = 0; i < messages.length - 100; i++) {
                messages[i].remove();
            }
        }
    }

    updateStreamStats() {
        // Update or create stats display
        let statsDiv = document.getElementById('streamStats');
        if (!statsDiv) {
            statsDiv = document.createElement('div');
            statsDiv.id = 'streamStats';
            statsDiv.className = 'stream-stats';
            
            const statusDiv = document.getElementById('status');
            statusDiv.parentNode.insertBefore(statsDiv, statusDiv.nextSibling);
        }
        
        const uptime = this.currentStream ? Math.floor((Date.now() - this.streamStartTime) / 1000) : 0;
        statsDiv.innerHTML = `
            ğŸ“Š å®æ—¶ç»Ÿè®¡: å·²æ¥æ”¶ <strong>${this.streamMessageCount}</strong> æ¡æ•°æ® | 
            è¿è¡Œæ—¶é—´: <strong>${uptime}</strong> ç§’ | 
            å¹³å‡é€Ÿç‡: <strong>${(this.streamMessageCount / Math.max(uptime, 1)).toFixed(1)}</strong> æ¡/ç§’
        `;
    }

    getErrorMessage(error) {
        if (!error) return 'æœªçŸ¥é”™è¯¯';
        
        // Handle gRPC-Web specific errors
        if (error.code !== undefined) {
            const grpcErrorCodes = {
                0: 'OK',
                1: 'CANCELLED - æ“ä½œè¢«å–æ¶ˆ',
                2: 'UNKNOWN - æœªçŸ¥é”™è¯¯',
                3: 'INVALID_ARGUMENT - æ— æ•ˆå‚æ•°',
                4: 'DEADLINE_EXCEEDED - è¯·æ±‚è¶…æ—¶',
                5: 'NOT_FOUND - æœªæ‰¾åˆ°',
                6: 'ALREADY_EXISTS - å·²å­˜åœ¨',
                7: 'PERMISSION_DENIED - æƒé™è¢«æ‹’ç»',
                8: 'RESOURCE_EXHAUSTED - èµ„æºè€—å°½',
                9: 'FAILED_PRECONDITION - å‰ç½®æ¡ä»¶å¤±è´¥',
                10: 'ABORTED - æ“ä½œè¢«ä¸­æ­¢',
                11: 'OUT_OF_RANGE - è¶…å‡ºèŒƒå›´',
                12: 'UNIMPLEMENTED - æœªå®ç°',
                13: 'INTERNAL - å†…éƒ¨é”™è¯¯',
                14: 'UNAVAILABLE - æœåŠ¡ä¸å¯ç”¨',
                15: 'DATA_LOSS - æ•°æ®ä¸¢å¤±',
                16: 'UNAUTHENTICATED - æœªè®¤è¯'
            };
            
            const codeDescription = grpcErrorCodes[error.code] || `æœªçŸ¥é”™è¯¯ä»£ç : ${error.code}`;
            return `gRPCé”™è¯¯: ${codeDescription}`;
        }
        
        if (error.message) {
            return error.message;
        }
        
        if (typeof error === 'string') {
            return error;
        }
        
        // Handle network errors
        if (error.name === 'TypeError' && error.message.includes('fetch')) {
            return 'ç½‘ç»œè¿æ¥é”™è¯¯ï¼Œè¯·æ£€æŸ¥æœåŠ¡å™¨æ˜¯å¦è¿è¡Œ';
        }
        
        return 'æœªçŸ¥é”™è¯¯: ' + JSON.stringify(error);
    }

    isConnectionError(error) {
        if (!error) return false;
        
        // Check gRPC error codes that indicate connection issues
        if (error.code !== undefined) {
            return error.code === 14 || // UNAVAILABLE
                   error.code === 4 ||  // DEADLINE_EXCEEDED
                   error.code === 1;    // CANCELLED
        }
        
        const errorMessage = this.getErrorMessage(error).toLowerCase();
        return errorMessage.includes('network') || 
               errorMessage.includes('connection') || 
               errorMessage.includes('timeout') ||
               errorMessage.includes('unavailable') ||
               errorMessage.includes('fetch') ||
               errorMessage.includes('cors') ||
               errorMessage.includes('refused');
    }
}

// Initialize the realtime push client when the page loads
document.addEventListener('DOMContentLoaded', () => {
    window.realtimePushClient = new RealtimePushClient();
});

// Export for potential use in other modules
if (typeof module !== 'undefined' && module.exports) {
    module.exports = RealtimePushClient;
}